@@ -127,5 +127,10 @@
 #     endif /* !STRICT */
 #   endif /* ACE_HAS_STRICT */
 
+// Define QT_DLL for QtReactor to be compiled correct
+#   if defined (ACE_HAS_QT)
+#     define QT_DLL
+#   endif
+
 #include /**/ "ace/post.h"
 #endif /* ACE_CONFIG_WIN32_MSVC_H */
